Save and Reset button

--- a/index.html
+++ b/index.html
@@ -104,6 +104,9 @@
             <div>H - Lights | G - Auto</div>
             <div style="margin-top: 5px;"><strong>Life:</strong></div>
             <div>E - Eat | F - Fuel | Q - Sleep</div>
+            <div style="margin-top: 5px;"><strong>Save:</strong></div>
+            <div>P - Save | O - Reset</div>
+            <div style="font-size: 10px; margin-top: 3px; color: #AAA;">Auto-saves every 30s</div>
         </div>
     </div>
     
